# circ

./: meson.build
include/: circ.h  meson.build
src/: circ.c  meson.build
test/: meson.build  test.c
